--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.0.6",
     "@uidotdev/usehooks": "^2.4.1",
+    "crypto-random-string": "^5.0.0",
     "dayjs": "^1.11.13",
+    "dexie": "^4.0.11",
     "motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
