--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:firefox": "tsc -b && vite -c vite.firefox.config.ts build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "tailwindcss": "^4.0.6",
     "vite-plugin-static-copy": "^2.2.0",
+    "webextension-polyfill": "^0.12.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
@@ -42,6 +44,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-clean": "^2.0.1"
   }
 }
