--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ant-design/icons": "^5.6.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.0.6",
     "@uidotdev/usehooks": "^2.4.1",
